--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "test": "jest"
+    "test": "jest",
+    "test:e2e": "cypress run"
+
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "express": "^5.2.1"
   },
   "devDependencies": {
+    "cypress": "^15.9.0",
     "jest": "^30.2.0",
     "supertest": "^7.2.2"
   }
